# palette_compression

./: .gitignore  README.md  main.py  painting.py  pyproject.toml  requirements.txt  samples.md
palette_compression/: __init__.py  __main__.py  painting.py
